# Reversecore_MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  COMMAND_BATCHING_OPTIMIZATION.md  Dockerfile  Dockerfile.arm64  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PROPOSAL.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_FINAL_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_KR.md  REFACTORING_SUMMARY.md  TASK_COMPLETION_REPORT.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py
.github/workflows/: codeql.yml  container-security.yml  docker.yml  gitleaks.yml  test.yml
docs/: ARCHITECTURE_IMPROVEMENTS.md  ASYNC_ROADMAP.md  CACHING_OPTIMIZATIONS.md  FASTMCP_CLOUD_SUPPORT.md  JSON_EXTRACTION_OPTIMIZATION.md  JSON_PARSING_OPTIMIZATION.md  METRICS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS_V3.md  PERFORMANCE_ANALYSIS_V4_FINAL.md  PERFORMANCE_ANALYSIS_V5.md  PERFORMANCE_AND_COVERAGE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_IMPROVEMENTS_V3.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_IMPROVEMENTS_V2.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_V4.md  SLOW_CODE_ANALYSIS.md  XREFS_AND_STRUCTURES_IMPLEMENTATION.md  changelog.md  r2pipe_poc_analysis.md  v1.1_technical_decisions.md
docs/api/tools/: cli-tools.md  ghost-trace.md  lib-tools.md  neural-decompiler.md  report-tools.md  trinity-defense.md
docs/development/: architecture.md  contributing.md  testing.md
docs/user-guide/: binary-analysis.md  decompilation.md  overview.md  threat-detection.md
resources/: FILE_COPY_TOOL_GUIDE.md  TOOLS.md
reversecore_mcp/: __init__.py  prompts.py  resources.py  server.py
reversecore_mcp/core/: __init__.py  async_execution.py  binary_cache.py  command_spec.py  config.py  decorators.py  error_formatting.py  error_handling.py  exceptions.py  execution.py  ghidra.py  ghidra_helper.py  ghidra_manager.py  json_utils.py  loader.py  logging_config.py  memory.py  metrics.py  mitre_mapper.py  r2_helpers.py  r2_pool.py  report_generator.py  resilience.py  resource_manager.py  result.py  security.py  settings_manager.py  validators.py
reversecore_mcp/prompts/: __init__.py  common.py  game.py  malware.py  report.py  security.py
reversecore_mcp/tools/: __init__.py  adaptive_vaccine.py  capstone_tools.py  cli_tools.py  cli_tools.py.backup  decompilation.py  diff_tools.py  file_operations.py  ghidra_tools.py  ghost_trace.py  ioc_tools.py  lib_tools.py  lief_tools.py  neural_decompiler.py  r2_analysis.py  radare2_mcp_tools.py  report_mcp_tools.py  report_tools.py  server_tools.py  signature_tools.py  static_analysis.py  trinity_defense.py  yara_tools.py
reversecore_mcp/tools/analysis/: __init__.py  capa_tools.py  die_tools.py  diff_tools.py  lief_tools.py  signature_tools.py  static_analysis.py
reversecore_mcp/tools/common/: __init__.py  file_operations.py  lib_tools.py  memory_tools.py  patch_explainer.py  server_tools.py
reversecore_mcp/tools/ghidra/: __init__.py  decompilation.py  ghidra_tools.py
reversecore_mcp/tools/malware/: __init__.py  adaptive_vaccine.py  dormant_detector.py  ioc_tools.py  vulnerability_hunter.py  yara_tools.py
reversecore_mcp/tools/radare2/: __init__.py  r2_analysis.py  r2_session.py  (+1 more)
scripts/: install-ghidra.ps1  install-ghidra.sh
templates/reports/: executive_brief.md  full_analysis.md  ioc_summary.md  quick_triage.md
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_tools.py  test_diff_and_library_tools.py  test_lib_tools.py  test_new_tools.py  test_p0_p2_improvements.py
tests/unit/: __init__.py  test_adaptive_vaccine.py  test_caching_optimizations.py  test_cfg_tools.py  test_cli_tools_additional.py  test_cli_tools_mocked.py  test_cli_tools_more.py  test_command_batching_optimization.py  test_command_spec.py  test_config.py  test_config_resources_extended.py  test_copy_workspace_tools.py  test_core_utilities.py  test_coverage_80_push.py  test_coverage_boost.py  test_coverage_boost_final.py  test_coverage_boost_v10.py  test_coverage_boost_v2.py  test_coverage_boost_v3.py  test_coverage_boost_v4.py  test_coverage_boost_v5.py  test_coverage_boost_v6.py  test_coverage_boost_v7.py  test_coverage_boost_v8.py  test_coverage_boost_v9.py  test_decorators.py  test_dormant_detector_extended.py  test_emulation_tools.py  test_error_formatting.py  test_error_handling.py  test_exceptions.py  test_execution.py  test_extract_iocs.py  test_file_operations_extended.py  test_ghidra_decompile.py  test_ghidra_helper_mocked.py  test_ghost_trace.py  test_ghost_trace_standalone.py  test_json_extraction_extended.py  test_json_extraction_performance.py  (+35 more)
(+9 files in other folders)
